@@ -1,3 +1,5 @@
+ * Docker testing arrived. Run `make docker-test` in your mod_md directory
+   to build and test the current sources in a Debian sid image.
  * The directive 'MDCertificateAuthority' now checks if its parameter is a http/https
    url or one of a set of known names. Those are 'LetsEncrypt', 'LetsEncrypt-Test',
    'Buypass' and 'Buypass-Test' for now and they are not case-sensitive.
